public class Main {

    public static void main(String[] args) {
        StreamingService streamingService = new StreamingService();
        streamingService.start();
    }
}
