public interface Menu {

    void setup ();
}
