public class RegularUser extends AUser {

    public RegularUser(String userName, String password) {
        super(userName, password);
    }
}
