@startuml
class Main
class StreamingService
interface Menu
abstract class AMenu
class StartMenu
class MainMenu
interface User
abstract class AUser
class RegularUser
interface Media
abstract class AMedia
class Movie
class Series
interface IO
class FileIO
class TextUI

Main *-- StreamingService
StreamingService *-- Menu
Menu <|-- AMenu
AMenu <|-- StartMenu
AMenu <|-- MainMenu
AMenu *-- TextUI
StartMenu *-- IO
MainMenu *-- IO
IO <|-- FileIO
StartMenu o-- User
MainMenu *-- User
User <|-- AUser
AUser <|-- RegularUser
MainMenu o-- Media
User o-- Media
Media <|-- AMedia
AMedia <|-- Movie
AMedia <|-- Series


Main : + static void main(string [] args)


StreamingService : - StartMenu startMenu
StreamingService : - MainMenu mainMenu
StreamingService : - TextUI ui

StreamingService : + void start()
StreamingService : + void loop()
StreamingService : + void end()


StreamingService *-l- TextUI


Menu : + void setup()


AMenu : - TextUI ui


StartMenu : - Map <String, String> users
StartMenu : - User user
StartMenu : - IO io

StartMenu : - void runUserDialog()
StartMenu : - void login()
StartMenu : - void registerUser ()
StartMenu : - boolean validateUserName(String userName)
StartMenu : - boolean validatePassword(String password)
StartMenu : - void loadUser(String userName, String password)
StartMenu : - Media createMedia(String data)
StartMenu : + User getUser()
StartMenu : + void setup()
StartMenu : + void loadUsers()
StartMenu : + void saveUsers()


MainMenu : - List <Media> medias
MainMenu : - boolean running
MainMenu : - User user
MainMenu : - IO io

MainMenu : - void search()
MainMenu : - void searchCategory()
MainMenu : - void showMediaList()
MainMenu : - void showUserWatchedList()
MainMenu : - void showUserFavoriteLit()
MainMenu : - void runMainMenuLoop()
MainMenu : - void playMedia(Media media)
MainMenu : - void chooseMedia(Media media)
MainMenu : - void addToFavorits(Media media)
MainMenu : - void removeFromFavorits(Media media)
MainMenu : - Media createMedia(String data, String type)
MainMenu : - void logout()
MainMenu : + void setUser(User user)
MainMenu : + void setup()
MainMenu : + void addMedia(Media media) ?
MainMenu : + void removeMedia(Media media) ?
MainMenu : + void loadMedia()


User : + String getUserName()
User : + List <Media> getWatchedList()
User : + List <Media> getFavoriteList()


AUser : - String userName
AUser : - String password
AUser : - List <Media> watchedMedia
AUser : - List <Media> favorites
AUser : + String getUserName()
AUser : + List <Media> getWatchedList()
AUser : + List <Media> getFavoriteList()


Media : + String getName()
Media : + float getRating()
Media : + int getReleasYears()
Media : + List<String> getCategories()
Media : + void play()


AMedia : - String name
AMedia : - float rating
AMedia : - int releasYear
AMedia : - List<String> categories

AMedia : + String getName()
AMedia : + float getRating()
AMedia : + int getReleasYears()
AMedia : + List<String> getCategories()
AMedia : + @Override String toString()


Series : - int endYear
Series : - Map<Integer, Integer> seasons
Series : + Map <Integer, Integer> getSeasons()

Series : + int getEndYear()
Series : + void play()
Series : + @Override String toString()


Movie : + void play()


IO : + List <String> readData(String path)
IO : + void saveMediaData(String path, List<Media> medias)
IO : + void saveUsersData(String path, Map<String, String> users)
IO : + boolean hasDataEntry(String path)


FileIO : - void ensureFileExistence(File file)
FileIO : + void List <String> readData(String path)
FileIO : + void saveMediaData(String path, List<Media> medias)
FileIO : + void saveUsersData(String path, Map<String, String> users)
FileIO : + void hasDataEntry(String path)


TextUI : - Scanner scanner;

TextUI : + String getInput(String msg)
TextUI : + String getChoice(String msg, Collection<?> options)
TextUI : + String getChoiceYN(String msg)
TextUI : + void displayOptions(Collection<?> options)
TextUI : + void displayMessage(String msg)

@enduml